--- a/less/container.less
+++ b/less/container.less
@@ -41,9 +41,7 @@
     
     .info-card {
       display: flex;
-      @media @tablet {
-          flex-direction: column;
-      }
+      
       @media @phone {
         flex-direction: column-reverse; 
     }
@@ -71,7 +69,7 @@
         margin: 3rem auto;
         border-radius: 5px;
         @media @tablet {
-            
+            margin: 3em 0 0 3em;
             width: 45%; 
             height: 45%;
         }
